--- a/public/ng/app/scss/partials/_alert.scss
+++ b/public/ng/app/scss/partials/_alert.scss
@@ -23,7 +23,7 @@
         top:              0; left: 0; bottom: 0; right: 0;
         width:            100%;
         background-size:  350px;
-        background-image: url('../images/pattern/grey.png');
+        background-image: url('../images/pattern/button_bar.png');
         border-radius:    5px;
         opacity:          0.5;
       }
